--- a/docs/scss/materials/components/sticky/sticky.scss
+++ b/docs/scss/materials/components/sticky/sticky.scss
@@ -3,6 +3,7 @@
 .sticky {
   @include flex-shrink(0);
   position: sticky;
+  z-index: 10;
 
   &--top {
     top: 0;
